--- a/Examples/SEIRMETA.ipynb
+++ b/Examples/SEIRMETA.ipynb
@@ -2,9 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel. \n",
+      "\u001b[1;31mCondaHTTPError: HTTP 000 CONNECTION FAILED for url <https://conda.anaconda.org/conda-forge/win-64/current_repodata.json>\n",
+      "\u001b[1;31mElapsed: -\n",
+      "\u001b[1;31m\n",
+      "\u001b[1;31mAn HTTP error occurred when trying to retrieve this URL.\n",
+      "\u001b[1;31mHTTP errors are often intermittent, and a simple retry will get you on your way.\n",
+      "\u001b[1;31m'https//conda.anaconda.org/conda-forge/win-64'. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -829,11 +845,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "cb78786f4cfdfefa515c7b40f13968897104e8ab34623df7a0e4a977a8f1c3ce"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.3 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -847,10 +860,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.13"
   },
-  "orig_nbformat": 4
+  "vscode": {
+   "interpreter": {
+    "hash": "e752d38c6179fa9248540a4bef94f3a65a845b49153ec2c66e11937ce2a0e45a"
+   }
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
