--- a/Examples/SEIRHVD.ipynb
+++ b/Examples/SEIRHVD.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,9 +110,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for *: 'float' and 'function'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m model \u001b[39m=\u001b[39m SEIRHVD(config \u001b[39m=\u001b[39m config)\n\u001b[0;32m      5\u001b[0m \u001b[39m# Simulate (solve ODE)\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m model\u001b[39m.\u001b[39;49msolve()\n",
+      "File \u001b[1;32mc:\\Users\\sscc3\\anaconda3\\envs\\dlab\\lib\\site-packages\\cv19gm-0.0.1-py3.10.egg\\cv19gm\\models\\seirhvd.py:299\u001b[0m, in \u001b[0;36mSEIRHVD.solve\u001b[1;34m(self, t0, T, h, method)\u001b[0m\n\u001b[0;32m    296\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mI_d \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mIm_d \u001b[39m+\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mIcr_d \u001b[39m+\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mIv_d\n\u001b[0;32m    297\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mI_ac \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mIm_ac \u001b[39m+\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mIcr_ac \u001b[39m+\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mIv_ac        \n\u001b[1;32m--> 299\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49munderreport()\n\u001b[0;32m    300\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39manalytics()\n\u001b[0;32m    301\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdf_build()\n",
+      "File \u001b[1;32mc:\\Users\\sscc3\\anaconda3\\envs\\dlab\\lib\\site-packages\\cv19gm-0.0.1-py3.10.egg\\cv19gm\\models\\seirhvd.py:370\u001b[0m, in \u001b[0;36mSEIRHVD.underreport\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    367\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mIm_d_det \u001b[39m=\u001b[39m [\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mIm_d[i]\u001b[39m*\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpI_det(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mt(i)) \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mt))]\n\u001b[0;32m    368\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mIm_ac_det \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mcumsum(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mIm_d_det)\n\u001b[1;32m--> 370\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mIm_det \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mIm\u001b[39m*\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mpI_det\n\u001b[0;32m    371\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mIm_d_det \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mIm_d\u001b[39m*\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpI_det\n\u001b[0;32m    372\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mIm_ac_det \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mIm_ac\u001b[39m*\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpI_det\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for *: 'float' and 'function'"
+     ]
+    }
+   ],
    "source": [
     "# Input configuration file\n",
     "config = 'cfg/SEIRHVD_SEIR.toml'\n",
@@ -124,371 +138,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>t</th>\n",
-       "      <th>dates</th>\n",
-       "      <th>S</th>\n",
-       "      <th>Sv</th>\n",
-       "      <th>E</th>\n",
-       "      <th>E_d</th>\n",
-       "      <th>Ev</th>\n",
-       "      <th>Ev_d</th>\n",
-       "      <th>Im</th>\n",
-       "      <th>Im_d</th>\n",
-       "      <th>...</th>\n",
-       "      <th>tH_D</th>\n",
-       "      <th>pR_S</th>\n",
-       "      <th>tR_S</th>\n",
-       "      <th>pIcr_det</th>\n",
-       "      <th>pIm_det</th>\n",
-       "      <th>pIv_de</th>\n",
-       "      <th>prevalence_total</th>\n",
-       "      <th>prevalence_susc</th>\n",
-       "      <th>prevalence_det</th>\n",
-       "      <th>CFR</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>986000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3000</td>\n",
-       "      <td>1500</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6000</td>\n",
-       "      <td>2999</td>\n",
-       "      <td>...</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.015000</td>\n",
-       "      <td>0.015000</td>\n",
-       "      <td>0.015000</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>None</td>\n",
-       "      <td>984813</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3531</td>\n",
-       "      <td>1302</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6052</td>\n",
-       "      <td>1523</td>\n",
-       "      <td>...</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.018000</td>\n",
-       "      <td>0.018000</td>\n",
-       "      <td>0.018000</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>None</td>\n",
-       "      <td>983609</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3982</td>\n",
-       "      <td>1241</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6193</td>\n",
-       "      <td>1040</td>\n",
-       "      <td>...</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.019523</td>\n",
-       "      <td>0.019523</td>\n",
-       "      <td>0.019523</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>None</td>\n",
-       "      <td>982372</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4382</td>\n",
-       "      <td>1240</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6401</td>\n",
-       "      <td>916</td>\n",
-       "      <td>...</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.020564</td>\n",
-       "      <td>0.020564</td>\n",
-       "      <td>0.020564</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>None</td>\n",
-       "      <td>981090</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4750</td>\n",
-       "      <td>1269</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6662</td>\n",
-       "      <td>918</td>\n",
-       "      <td>...</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.021480</td>\n",
-       "      <td>0.021480</td>\n",
-       "      <td>0.021480</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>495</th>\n",
-       "      <td>495</td>\n",
-       "      <td>None</td>\n",
-       "      <td>201828</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.806824</td>\n",
-       "      <td>0.806824</td>\n",
-       "      <td>0.806824</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>496</th>\n",
-       "      <td>496</td>\n",
-       "      <td>None</td>\n",
-       "      <td>201828</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.806824</td>\n",
-       "      <td>0.806824</td>\n",
-       "      <td>0.806824</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>497</th>\n",
-       "      <td>497</td>\n",
-       "      <td>None</td>\n",
-       "      <td>201828</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.806824</td>\n",
-       "      <td>0.806824</td>\n",
-       "      <td>0.806824</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>498</th>\n",
-       "      <td>498</td>\n",
-       "      <td>None</td>\n",
-       "      <td>201828</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.806824</td>\n",
-       "      <td>0.806824</td>\n",
-       "      <td>0.806824</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>499</th>\n",
-       "      <td>499</td>\n",
-       "      <td>None</td>\n",
-       "      <td>201828</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.806824</td>\n",
-       "      <td>0.806824</td>\n",
-       "      <td>0.806824</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>500 rows × 71 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       t dates       S  Sv     E   E_d  Ev  Ev_d    Im  Im_d  ...  tH_D  pR_S  \\\n",
-       "0      0  None  986000   0  3000  1500   0     0  6000  2999  ...  11.0   0.0   \n",
-       "1      1  None  984813   0  3531  1302   0     0  6052  1523  ...  11.0   0.0   \n",
-       "2      2  None  983609   0  3982  1241   0     0  6193  1040  ...  11.0   0.0   \n",
-       "3      3  None  982372   0  4382  1240   0     0  6401   916  ...  11.0   0.0   \n",
-       "4      4  None  981090   0  4750  1269   0     0  6662   918  ...  11.0   0.0   \n",
-       "..   ...   ...     ...  ..   ...   ...  ..   ...   ...   ...  ...   ...   ...   \n",
-       "495  495  None  201828   0     0     0   0     0     0     0  ...  11.0   0.0   \n",
-       "496  496  None  201828   0     0     0   0     0     0     0  ...  11.0   0.0   \n",
-       "497  497  None  201828   0     0     0   0     0     0     0  ...  11.0   0.0   \n",
-       "498  498  None  201828   0     0     0   0     0     0     0  ...  11.0   0.0   \n",
-       "499  499  None  201828   0     0     0   0     0     0     0  ...  11.0   0.0   \n",
-       "\n",
-       "     tR_S  pIcr_det  pIm_det  pIv_de  prevalence_total  prevalence_susc  \\\n",
-       "0    90.0       1.0      1.0     1.0          0.015000         0.015000   \n",
-       "1    90.0       1.0      1.0     1.0          0.018000         0.018000   \n",
-       "2    90.0       1.0      1.0     1.0          0.019523         0.019523   \n",
-       "3    90.0       1.0      1.0     1.0          0.020564         0.020564   \n",
-       "4    90.0       1.0      1.0     1.0          0.021480         0.021480   \n",
-       "..    ...       ...      ...     ...               ...              ...   \n",
-       "495  90.0       1.0      1.0     1.0          0.806824         0.806824   \n",
-       "496  90.0       1.0      1.0     1.0          0.806824         0.806824   \n",
-       "497  90.0       1.0      1.0     1.0          0.806824         0.806824   \n",
-       "498  90.0       1.0      1.0     1.0          0.806824         0.806824   \n",
-       "499  90.0       1.0      1.0     1.0          0.806824         0.806824   \n",
-       "\n",
-       "     prevalence_det  CFR  \n",
-       "0          0.015000  0.0  \n",
-       "1          0.018000  0.0  \n",
-       "2          0.019523  0.0  \n",
-       "3          0.020564  0.0  \n",
-       "4          0.021480  0.0  \n",
-       "..              ...  ...  \n",
-       "495        0.806824  0.0  \n",
-       "496        0.806824  0.0  \n",
-       "497        0.806824  0.0  \n",
-       "498        0.806824  0.0  \n",
-       "499        0.806824  0.0  \n",
-       "\n",
-       "[500 rows x 71 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'SEIRHVD' object has no attribute 'results'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# Show results\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m model\u001b[39m.\u001b[39;49mresults\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'SEIRHVD' object has no attribute 'results'"
+     ]
     }
    ],
    "source": [
@@ -1501,11 +1165,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "cb78786f4cfdfefa515c7b40f13968897104e8ab34623df7a0e4a977a8f1c3ce"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.3 ('base')",
+   "display_name": "dlab",
    "language": "python",
    "name": "python3"
   },
@@ -1519,7 +1180,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.10.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e752d38c6179fa9248540a4bef94f3a65a845b49153ec2c66e11937ce2a0e45a"
+   }
   }
  },
  "nbformat": 4,
