--- a/Examples/SEIR.ipynb
+++ b/Examples/SEIR.ipynb
@@ -38,6 +38,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from cv19gm.models.seir import SEIR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Util libraries\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -87,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +487,7 @@
        "[500 rows x 24 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1159,7 +1168,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.3 ('base')",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1173,11 +1182,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3 (default, Jul  2 2020, 16:21:59) \n[GCC 7.3.0]"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
-    "hash": "cb78786f4cfdfefa515c7b40f13968897104e8ab34623df7a0e4a977a8f1c3ce"
+    "hash": "878372355aa7789ee3eb8f545bc8f45437ada6dc08f62833c1987e3dbfb5f2e1"
    }
   }
  },
