--- a/Examples/SIR.ipynb
+++ b/Examples/SIR.ipynb
@@ -765,7 +765,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.3 ('base')",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -779,11 +779,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
-    "hash": "cb78786f4cfdfefa515c7b40f13968897104e8ab34623df7a0e4a977a8f1c3ce"
+    "hash": "878372355aa7789ee3eb8f545bc8f45437ada6dc08f62833c1987e3dbfb5f2e1"
    }
   }
  },
