--- a/Examples/cv19functions.ipynb
+++ b/Examples/cv19functions.ipynb
@@ -689,9 +689,6 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "cb78786f4cfdfefa515c7b40f13968897104e8ab34623df7a0e4a977a8f1c3ce"
-  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -707,7 +704,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
   }
  },
  "nbformat": 4,
