SEIR and SEIRMETA update

--- a/Examples/SEIR.ipynb
+++ b/Examples/SEIR.ipynb
@@ -1,11 +1,11 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# SEIR model example\n",
-    "\n",
     "\n",
     "\\begin{align}\n",
     "\\dot{S} & = - \\alpha\\beta\\frac{SI}{N} + \\rho_{RS} R + \\phi_S \\\\\n",
