--- a/Examples/SEIR_ABM.ipynb
+++ b/Examples/SEIR_ABM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,14 +31,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  Activating project at `~/Recursos/DLAB/covid19geomodeller/covid19geomodeller/julia`\n"
+     "ename": "ImportError",
+     "evalue": "cannot import name 'Main' from 'julia' (unknown location)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m/home/samuel/covid19geomodeller/Examples/SEIR_ABM.ipynb Cell 4\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/samuel/covid19geomodeller/Examples/SEIR_ABM.ipynb#W3sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mcv19gm\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmodels\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mseir_ABM\u001b[39;00m \u001b[39mimport\u001b[39;00m SEIR_ABM\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/samuel/covid19geomodeller/Examples/SEIR_ABM.ipynb#W3sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m#Input configuration file\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/samuel/covid19geomodeller/Examples/SEIR_ABM.ipynb#W3sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m config \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mExamples/cfg/SEIR_ABM.toml\u001b[39m\u001b[39m'\u001b[39m\n",
+      "File \u001b[0;32m~/covid19geomodeller/cv19gm/models/seir_ABM.py:2\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mjulia\u001b[39;00m \u001b[39mimport\u001b[39;00m Main \u001b[39mas\u001b[39;00m Julia\n\u001b[1;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mjulia\u001b[39;00m \u001b[39mimport\u001b[39;00m Pkg\n\u001b[1;32m      5\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mcv19gm\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mutils\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcv19files\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mcv19files\u001b[39;00m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'Main' from 'julia' (unknown location)"
      ]
     }
    ],
@@ -599,7 +604,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.8.3"
   },
   "orig_nbformat": 4,
   "vscode": {
